chore: Update styles and components for consistent link styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,6 +84,11 @@
 	transition: width 1s ease-in-out;
 }
 
+a:-webkit-any-link {
+	text-decoration: none;
+	color: inherit;
+}
+
 @media only screen and (max-width: 600px) {
 	.MuiInputBase-input {
 		width: 100%;
